Close ColorDialog if parent pointer is destroyed

On macOS if the parent pointer is missing there is a crash, if the 
parent widget is destroyed we close the colorDialog to avoid
avoid crashing when interacting with the orphan ColorDialog

BUG:413922